# c-benchmarks

./: .gitignore  .pre-commit-config.yaml  main.c  meson.build  meson_options.txt  readme.md
examples/: complex_vector_instance.c  matrix_instance.c  matrix_multiply.c  meson.build
include/: gcd.h  linear_algebra.h  matrix.h  md5.h  meson.build  status.h
src/: gcd.c  matrix.c  md5.c  meson.build
